030-software/fluxcd/apps/ws-screenshot/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ws-screenshot
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: ws-screenshot
  template:
    metadata:
      labels:
        app: ws-screenshot
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: ws-screenshot
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: ws-screenshot
      containers:
        - name: ws-screenshot
          image: elestio/ws-screenshot.slim:1.2.0@sha256:8f9c67415b155b47871a82bca79726ba152d4c5c8716caafe6f3c5f0e98783b9
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
            limits:
              memory: 512Mi
