030-software/fluxcd/apps/ws-screenshot/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ws-screenshot
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ws-screenshot
