030-software/fluxcd/apps/ws-screenshot/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ws-screenshot
  annotations:
    dashboard.${domain}/name: ws-screenshot
    dashboard.${domain}/url: https://ws-screenshot.${domain}
    dashboard.${domain}/icon: camera
spec:
  hostnames:
  - ws-screenshot.${domain}
  parentRefs:
  - name: cilium
    namespace: cilium
  rules:
  - backendRefs:
    - name: ws-screenshot
      port: 80
    matches:
    - path:
        type: PathPrefix
        value: /
